--- a/jacareview/package.json
+++ b/jacareview/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookies-next": "^4.1.0",
+    "dotenv": "^16.3.1",
     "firebase": "^10.6.0",
     "next": "^14.0.4-canary.4",
     "react": "^18",
