--- a/jacareview/package.json
+++ b/jacareview/package.json
@@ -12,6 +12,7 @@
     "cookies-next": "^4.1.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.6.0",
+    "geolib": "^3.3.4",
     "lucide-react": "^0.292.0",
     "next": "^14.0.4-canary.4",
     "react": "^18",
