--- a/jacareview/package.json
+++ b/jacareview/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^4.4.0",
     "cookies-next": "^4.1.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.6.0",
@@ -16,6 +17,7 @@
     "lucide-react": "^0.292.0",
     "next": "^14.0.4-canary.4",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1"
   },
