--- a/jacareview/package.json
+++ b/jacareview/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "cookies-next": "^4.1.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.6.0",
@@ -16,7 +17,9 @@
     "next": "^14.0.4-canary.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.48.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
