--- a/jacareview/package.json
+++ b/jacareview/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.6.0",
     "geolib": "^3.3.4",
     "lucide-react": "^0.292.0",
+    "moment": "^2.29.4",
     "next": "^14.0.4-canary.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
