--- a/jacareview/package.json
+++ b/jacareview/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.48.2",
+    "react-toastify": "^9.1.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
