--- a/jacareview/package.json
+++ b/jacareview/package.json
@@ -26,6 +26,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.48.2",
     "react-toastify": "^9.1.3",
+    "react-use": "^17.4.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
