--- a/jacareview/package.json
+++ b/jacareview/package.json
@@ -20,11 +20,12 @@
     "lucide-react": "^0.292.0",
     "moment": "^2.29.4",
     "next": "^14.0.4-canary.4",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.48.2",
+    "react-spring": "^9.7.3",
     "react-toastify": "^9.1.3",
     "react-use": "^17.4.1",
     "zod": "^3.22.4"
