--- a/jacareview/package.json
+++ b/jacareview/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.2",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
+    "@types/googlemaps": "^3.43.3",
     "chart.js": "^4.4.0",
     "cookies-next": "^4.1.0",
     "dotenv": "^16.3.1",
