--- a/jacareview/package.json
+++ b/jacareview/package.json
@@ -16,6 +16,7 @@
     "@types/googlemaps": "^3.43.3",
     "chart.js": "^4.4.0",
     "cookies-next": "^4.1.0",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.6.0",
     "geolib": "^3.3.4",
@@ -25,6 +26,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.24.0",
+    "react-datetime-picker": "^5.5.3",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.48.2",
