--- a/jacareview/package.json
+++ b/jacareview/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest",
+    "cypress:open": "npx cypress open"
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.2",
@@ -16,6 +18,7 @@
     "@types/googlemaps": "^3.43.3",
     "chart.js": "^4.4.0",
     "cookies-next": "^4.1.0",
+    "cypress": "^13.6.1",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.6.0",
@@ -46,6 +49,7 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^1.1.0"
   }
 }
