--- a/jacareview/package.json
+++ b/jacareview/package.json
@@ -18,7 +18,6 @@
     "@types/googlemaps": "^3.43.3",
     "chart.js": "^4.4.0",
     "cookies-next": "^4.1.0",
-    "cypress": "^13.6.1",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.6.0",
@@ -47,6 +46,9 @@
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.12",
     "autoprefixer": "^10.4.16",
+    "cypress": "^13.6.1",
+    "cypress-firebase": "^3.0.2",
+    "firebase-admin": "^11.11.1",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5",
