--- a/jacareview/package.json
+++ b/jacareview/package.json
@@ -40,6 +40,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/react": "^14.1.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-datepicker": "^4.19.3",
@@ -49,6 +51,7 @@
     "cypress": "^13.6.1",
     "cypress-firebase": "^3.0.2",
     "firebase-admin": "^11.11.1",
+    "jsdom": "^23.0.1",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5",
